# google-workspace-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Code.gs  LICENSE  README.md  appsscript.json  install.sh  kill-port.sh  pyproject.toml  send-html.sh  send_html.py  test-mcp-simple.py  test-mcp.py
docs/: DETACH-MODE.md  HTML-EMAIL-FIX.md
google_workspace_mcp/: __init__.py  auth.py  client.py  gogcli_server.py  server.py  server_gogcli.py
legacy-extras/: GOGCLI-GUIDE.md  QUICKSTART.md  auth-headless.md  auth-headless.sh  client.py  examples.sh  fix-credentials.sh  install-gogcli.sh
memory/: MEMORY.md
scripts/: drive_folder_access.py
