[project]
name = "google-workspace-mcp-server"
version = "0.2.0"
description = "MCP server for Google Workspace API (Gmail, Sheets, Docs, Drive, Slides, Calendar) with gogcli backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.7.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.20.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
google-workspace-mcp = "google_workspace_mcp.server:main"
google-workspace-gogcli = "google_workspace_mcp.gogcli_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
